--- a/package.json
+++ b/package.json
@@ -16,4 +16,7 @@
     "url": "https://github.com/unasuke/unasuke.com/issues"
   },
   "homepage": "https://github.com/unasuke/unasuke.com#readme",
+  "devDependencies": {
+    "node-sass": "^3.4.2"
+  }
 }
