--- a/source/data/sponsors.yml
+++ b/source/data/sponsors.yml
@@ -4,7 +4,7 @@ yoshikawayasuo:
   image: "yoshikawayasuo.jpg"
 ukstudio:
   twitter: ukstudio
-  name: "ukstudio"
+  name: "ゆーけー"
   image: "ukstudio.png"
 kanizmb:
   twitter: kanizmb
@@ -16,22 +16,22 @@ kirikiriyamama:
   image: "kirikiriyamama.png"
 marin72_com:
   twitter: marin72_com
-  name: "半角ｶﾀｶﾅはｵﾀｸ"
-  image: "marin72_com.jpg"
+  name: "ふぁぼすくい師"
+  image: "marin72_com.png"
 cyclonext01:
   twitter: cyclonext01
   name: "死後裁きにあう"
   image: "cyclonext01.jpg"
 denari01:
   twitter: denari01
-  name: "denari01(lol)"
+  name: "denari01 #meganehack"
   image: "denari01.jpg"
 NKMR6194:
   twitter: NKMR6194
-  name: "酒田　シンジ"
+  name: "酒田　シンジ㌠"
   image: "NKMR6194.png"
 yterajima:
   twitter: yterajima
-  name: "攻撃的守銭奴(新婚)"
+  name: "お金駆動開発"
   image: "yterajima.jpg"
 
