--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "unasuke.com",
   "version": "0.1.0",
   "description": "unasuke.com",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sass": "for file in `ls -1 source/stylesheets/[!_]*.scss`; do node-sass $file -o source/stylesheets/dest/; done"
   },
   "repository": {
     "type": "git",
