Update sponsor status

--- a/source/data/sponsors.yml
+++ b/source/data/sponsors.yml
@@ -16,7 +16,7 @@ kirikiriyamama:
   image: "kirikiriyamama.png"
 marin72_com:
   twitter: marin72_com
-  name: "ふぁぼすくい師"
+  name: "なっちゃん"
   image: "marin72_com.png"
 cyclonext01:
   twitter: cyclonext01
