Update sponsors status

--- a/source/data/sponsors.yml
+++ b/source/data/sponsors.yml
@@ -4,7 +4,7 @@ yoshikawayasuo:
   image: "yoshikawayasuo.jpg"
 ukstudio:
   twitter: ukstudio
-  name: "ゆーけー"
+  name: "カミソリゆーけー"
   image: "ukstudio.png"
 kanizmb:
   twitter: kanizmb
@@ -16,15 +16,15 @@ kirikiriyamama:
   image: "kirikiriyamama.png"
 marin72_com:
   twitter: marin72_com
-  name: "なっちゃん"
-  image: "marin72_com.png"
+  name: "かぴばーら"
+  image: "marin72_com.jpg"
 cyclonext01:
   twitter: cyclonext01
   name: "死後裁きにあう"
   image: "cyclonext01.jpg"
 denari01:
   twitter: denari01
-  name: "denari01 #meganehack"
+  name: "denari01"
   image: "denari01.jpg"
 NKMR6194:
   twitter: NKMR6194
@@ -32,6 +32,6 @@ NKMR6194:
   image: "NKMR6194.png"
 yterajima:
   twitter: yterajima
-  name: "お金駆動開発"
+  name: "お金ファースト"
   image: "yterajima.jpg"
 
