--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/unasuke/unasuke.com#readme",
   "devDependencies": {
-    "node-sass": "^3.4.2"
+    "node-sass": "^3.4.2",
+    "yarn": "^0.18.1"
   }
 }
