Update sponsors infomation

--- a/source/data/sponsors.yml
+++ b/source/data/sponsors.yml
@@ -4,7 +4,7 @@ yoshikawayasuo:
   image: "yoshikawayasuo.jpg"
 ukstudio:
   twitter: ukstudio
-  name: "カミソリゆーけー"
+  name: "ゆーけー"
   image: "ukstudio.png"
 kanizmb:
   twitter: kanizmb
@@ -15,9 +15,9 @@ kirikiriyamama:
   name: "やまま"
   image: "kirikiriyamama.png"
 marin72_com:
-  twitter: marin72_com
-  name: "かぴばーら"
-  image: "marin72_com.jpg"
+  twitter: pndcat
+  name: "旧marin72_com"
+  image: "pndcat.jpg"
 cyclonext01:
   twitter: cyclonext01
   name: "死後裁きにあう"
@@ -28,10 +28,10 @@ denari01:
   image: "denari01.jpg"
 NKMR6194:
   twitter: NKMR6194
-  name: "酒田　シンジ㌠"
+  name: "酒田　シンジ"
   image: "NKMR6194.png"
 yterajima:
   twitter: yterajima
-  name: "お金ファースト"
+  name: "yterajima"
   image: "yterajima.jpg"
 
