--- a/source/data/sponsors.yml
+++ b/source/data/sponsors.yml
@@ -34,4 +34,7 @@ yterajima:
   twitter: yterajima
   name: "yterajima"
   image: "yterajima.jpg"
-
+n0h0:
+  twitter: n0_h0
+  name: "のほ"
+  image: "n0h0.png"
