Add sponsor yagi2

--- a/source/data/sponsors.yml
+++ b/source/data/sponsors.yml
@@ -38,3 +38,7 @@ n0h0:
   twitter: n0_h0
   name: "のほ"
   image: "n0h0.png"
+yagi2:
+  twitter: magical_reisen
+  name: "やぎにいちゃん[麺量397g]"
+  image: "yagi2.png"
