Add sachin to sponsor

--- a/source/data/sponsors.yml
+++ b/source/data/sponsors.yml
@@ -42,3 +42,7 @@ yagi2:
   twitter: magical_reisen
   name: "やぎにいちゃん[麺量397g]"
   image: "yagi2.png"
+sachin:
+  twitter: sachin21__
+  name: "さっちん"
+  image: "sachin.jpg"
