Add yumemaru to sponsor

--- a/source/data/sponsors.yml
+++ b/source/data/sponsors.yml
@@ -46,3 +46,7 @@ sachin:
   twitter: sachin21__
   name: "さっちん"
   image: "sachin.jpg"
+yumemaru:
+  twitter: yumemaru_0
+  name: "ゆめまる"
+  image: "yumemaru.jpg"
