Add denden to sponsor

--- a/source/data/sponsors.yml
+++ b/source/data/sponsors.yml
@@ -50,3 +50,7 @@ yumemaru:
   twitter: yumemaru_0
   name: "ゆめまる"
   image: "yumemaru.jpg"
+denden:
+  twitter: 195_den
+  name: "でんでん"
+  image: "denden.jpg"
