Add nekogami to sponsor

--- a/source/data/sponsors.yml
+++ b/source/data/sponsors.yml
@@ -54,3 +54,7 @@ denden:
   twitter: 195_den
   name: "でんでん"
   image: "denden.jpg"
+nekogami:
+  twitter: Hino_cat
+  name: 'ねこがみ'
+  image: 'nekogami.jpg'
