Add dieson to sponsor

--- a/source/data/sponsors.yml
+++ b/source/data/sponsors.yml
@@ -58,3 +58,7 @@ nekogami:
   twitter: Hino_cat
   name: 'ねこがみ'
   image: 'nekogami.jpg'
+dieson:
+  twitter: Dieson23
+  name: 'だいそん'
+  image: 'dieson.jpg'
