Update sponsors info

--- a/source/data/sponsors.yml
+++ b/source/data/sponsors.yml
@@ -4,7 +4,7 @@ yoshikawayasuo:
   image: "yoshikawayasuo.jpg"
 ukstudio:
   twitter: ukstudio
-  name: "ゆーけー"
+  name: "ゆーけー@ボールド"
   image: "ukstudio.png"
 kanizmb:
   twitter: kanizmb
@@ -16,7 +16,7 @@ kirikiriyamama:
   image: "kirikiriyamama.png"
 marin72_com:
   twitter: pndcat
-  name: "旧marin72_com"
+  name: "よく鞄が開いている人"
   image: "pndcat.jpg"
 cyclonext01:
   twitter: cyclonext01
@@ -40,7 +40,7 @@ n0h0:
   image: "n0h0.png"
 yagi2:
   twitter: magical_reisen
-  name: "やぎにいちゃん[麺量397g]"
+  name: "やぎにいちゃん[麺量404g]"
   image: "yagi2.png"
 sachin:
   twitter: sachin21__
