Add mitsu to sponsor

--- a/source/data/sponsors.yml
+++ b/source/data/sponsors.yml
@@ -62,3 +62,7 @@ dieson:
   twitter: Dieson23
   name: 'だいそん'
   image: 'dieson.jpg'
+mitsu:
+  twitter: nasustim
+  name: 'みつ'
+  image: 'mitsu.jpg'
