--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/unasuke/unasuke.com#readme",
   "devDependencies": {
-    "node-sass": "^4.1.1"
+    "node-sass": "^4.1.1",
+    "webpack": "^3.6.0"
   }
 }
