--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/unasuke/unasuke.com#readme",
   "devDependencies": {
     "node-sass": "^4.1.1",
+    "sass-loader": "^6.0.6",
     "webpack": "^3.6.0"
   }
 }
