--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "unasuke.com",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "for file in `ls -1 source/stylesheets/src/[!_]*.scss`; do node-sass $file -o source/stylesheets/; done"
+    "scss": "for file in `ls -1 source/stylesheets/src/[!_]*.scss`; do node-sass $file -o source/stylesheets/; done",
+    "build": "webpack",
+    "build:watch": "webpack --progress --watch"
   },
   "repository": {
     "type": "git",
