Add sponsor dosu
https://twitter.com/Do_Su_0805/status/931834331072413699

--- a/source/data/sponsors.yml
+++ b/source/data/sponsors.yml
@@ -66,3 +66,7 @@ mitsu:
   twitter: nasustim
   name: 'みつ'
   image: 'mitsu.jpg'
+dosu:
+  twitter: Do_Su_0805
+  name: 'どぅーす〜'
+  image: 'dosu.png'
