Add sponsor puhitaku
https://user-images.githubusercontent.com/4487291/33801190-41eb5480-dd96-11e7-9122-e746cfa9948f.jpg

--- a/source/data/sponsors.yml
+++ b/source/data/sponsors.yml
@@ -70,3 +70,7 @@ dosu:
   twitter: Do_Su_0805
   name: 'どぅーす〜'
   image: 'dosu.png'
+puhitaku:
+  twitter: puhitaku
+  name: 'Takumi Sueda'
+  image: puhitaku.jpg
